Add homepage field and deploy scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mc0749050.github.io/React-calculator",
+  "homepage": "https://github.com/mc0749050/React-calculator.git",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
